--- a/src/main/resources/br/com/fitcontrol/fitcontrol/payments-screen.fxml
+++ b/src/main/resources/br/com/fitcontrol/fitcontrol/payments-screen.fxml
@@ -1,19 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.geometry.Insets?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="br.com.fitcontrol.fitcontrol.controllers.PaymentsScreenController"
-            prefHeight="1024.0" prefWidth="600.0">
+<AnchorPane prefHeight="1024.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.fitcontrol.fitcontrol.controllers.PaymentsScreenController">
+    <Pane layoutX="401.0" layoutY="343.0" prefHeight="99.0" prefWidth="658.0" style="-fx-background-radius: 10; -fx-background-color: FFFFFF; -fx-border-color: E9AF00; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+        <children>
+            <Pane layoutX="97.0" layoutY="69.0" prefHeight="25.0" prefWidth="124.0" style="-fx-background-radius: 10; -fx-background-color: FFFFFF; -fx-border-color: E9AF00; -fx-border-radius: 10;">
+                <children>
+                    <Label layoutX="9.0" layoutY="4.0" prefHeight="14.0" prefWidth="71.0" text="dd/mm/aaaa">
+                  <font>
+                     <Font name="Roboto Light" size="12.0" />
+                  </font></Label>
+               <ImageView fitHeight="19.0" fitWidth="23.0" layoutX="89.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@icons/calendario.png" />
+                  </image></ImageView>
+                </children>
+            </Pane>
+            <Label layoutX="22.0" layoutY="73.0" text="Período:">
+            <font>
+               <Font name="Roboto Light" size="12.0" />
+            </font></Label>
+         <Label alignment="CENTER" layoutX="302.0" layoutY="7.0" prefHeight="34.0" prefWidth="54.0" text="Filtros" textAlignment="JUSTIFY">
+            <font>
+               <Font name="Roboto Light" size="12.0" />
+            </font>
+         </Label>
+         <Label layoutX="236.0" layoutY="73.0" text="até">
+            <font>
+               <Font name="Roboto Light" size="12.0" />
+            </font>
+         </Label>
+         <Pane layoutX="267.0" layoutY="69.0" prefHeight="25.0" prefWidth="124.0" style="-fx-background-radius: 10; -fx-background-color: FFFFFF; -fx-border-color: E9AF00; -fx-border-radius: 10;">
+            <children>
+               <Label layoutX="6.0" layoutY="4.0" prefHeight="14.0" prefWidth="71.0" text="dd/mm/aaaa">
+                  <font>
+                     <Font name="Roboto Light" size="12.0" />
+                  </font>
+               </Label>
+               <ImageView fitHeight="19.0" fitWidth="23.0" layoutX="89.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@icons/calendario.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </Pane>
+         <Label layoutX="412.0" layoutY="73.0" text="Valor:">
+            <font>
+               <Font name="Roboto Light" size="12.0" />
+            </font>
+         </Label>
+         <Pane layoutX="464.0" layoutY="69.0" prefHeight="25.0" prefWidth="124.0" style="-fx-background-radius: 10; -fx-background-color: FFFFFF; -fx-border-color: E9AF00; -fx-border-radius: 10;">
+            <children>
+               <Label layoutX="6.0" layoutY="4.0" opacity="0.41" prefHeight="17.0" prefWidth="112.0" text="R$">
+                  <font>
+                     <Font name="Roboto Light" size="12.0" />
+                  </font>
+               </Label>
+               <ImageView fitHeight="19.0" fitWidth="23.0" layoutX="473.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@icons/calendario.png" />
+                  </image>
+               </ImageView>
+            </children>
+         </Pane>
+         <ImageView fitHeight="25.0" fitWidth="29.0" layoutX="607.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true" />
+        </children>
+    </Pane>
+
     <StackPane prefHeight="160.0" prefWidth="1440.0">
         <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffbf00" height="160.0" stroke="BLACK" strokeType="INSIDE" width="1440.0" />
@@ -25,5 +84,15 @@
                     <Insets left="160.0" />
                 </StackPane.margin>
             </ImageView>
-        </children></StackPane>
+
+              </children>
+   </StackPane>
+   <TableView layoutX="396.0" layoutY="529.0" prefHeight="429.0" prefWidth="667.0" style="-fx-border-color: #FFBF00;">
+     <columns>
+       <TableColumn prefWidth="166.75" text="ID" />
+       <TableColumn prefWidth="166.75" text="Data" />
+         <TableColumn prefWidth="166.75" text="Valor" />
+         <TableColumn prefWidth="166.75" text="Ações" />
+     </columns>
+   </TableView>
 </AnchorPane>
